[project]
name = "pyckage"
version = "0.1.0"
description = "A basic NodeJS package manager"
authors = [
    { name = "jaydrennan", email = "jsdman1313@gmail.com" }
]
dependencies = [
    "click>=8.1.7",
    "httpx>=0.27.0",
    "pytest>=8.2.2",
    "node-semver>=0.9.0",
    "tqdm>=4.66.4",
    "rich>=13.7.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
pyckage = "pyckage.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyckage"]
